--- a/evaluate_open_set.ipynb
+++ b/evaluate_open_set.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -53,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -80,7 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -102,7 +102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -150,7 +150,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -179,7 +179,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -208,7 +208,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -225,7 +225,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 117,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -248,7 +248,7 @@
     "    b = len(prob_ids)\n",
     "    print('\\n 2nd iden Corr=%0.1f%% \\n' % (100.0*a / b) )\n",
     "\n",
-    "    target_FTRS = [0.0001, 0.01, 0.1, 0.2, 0.3]\n",
+    "    target_FTRS = [0.0001, 0.01, 0.05, 0.1, 0.2, 0.3]\n",
     "    thresholds = np.unique(np.concatenate((top1_scores_0,top1_scores_1,\n",
     "                                              open_set_1st_scores_0,open_set_1st_scores_1)))\n",
     "\n",
@@ -277,8 +277,56 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 14,
    "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Rank-1:\n",
+      " model0:0.9605785854746539 \n",
+      " model1:0.9650261973578282 \n",
+      " mean_fuse:0.9690448852463344\n",
+      "\n",
+      " any(2nd,3rd,4th) iden Corr=70.9% \n",
+      "\n",
+      "\n",
+      " 2nd iden Corr=28.1% \n",
+      "\n",
+      "FTR=0.1%, TTR=98.9%\n",
+      "FTR=1.1%, TTR=99.5%\n",
+      "FTR=5.1%, TTR=99.6%\n",
+      "FTR=10.1%, TTR=99.7%\n",
+      "FTR=20.1%, TTR=99.7%\n",
+      "FTR=30.0%, TTR=99.7%\n"
+     ]
+    }
+   ],
+   "source": [
+    "# baseline\n",
+    "match_path = \"results/baseline_0/matches_facescrub_megaface_images_base_0_1000000_1.json\"\n",
+    "distractor_mat_path = \"results/baseline_0/otherFiles/facescrub_megaface_images_base_0_1000000_1.bin\"\n",
+    "prob_mat_path = \"results/baseline_0/otherFiles/facescrub_facescrub_base_0.bin\"\n",
+    "features_path = \"results/baseline_0/otherFiles/facescrub_features_base_0\"\n",
+    "\n",
+    "prob_mat_0, distractor_mat_0, prob_ids = load_files(match_path, distractor_mat_path, prob_mat_path, features_path)\n",
+    "\n",
+    "match_path = \"results/baseline_1/matches_facescrub_megaface_images_base_1_1000000_1.json\"\n",
+    "distractor_mat_path = \"results/baseline_1/otherFiles/facescrub_megaface_images_base_1_1000000_1.bin\"\n",
+    "prob_mat_path = \"results/baseline_1/otherFiles/facescrub_facescrub_base_1.bin\"\n",
+    "features_path = \"results/baseline_1/otherFiles/facescrub_features_base_1\"\n",
+    "\n",
+    "prob_mat_1, distractor_mat_1, prob_ids = load_files(match_path, distractor_mat_path, prob_mat_path, features_path)\n",
+    "baseline_thresholds, baseline_FTRs, baseline_TTR = fuse_models(prob_mat_0, distractor_mat_0, prob_mat_1, distractor_mat_1, prob_ids)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -315,6 +363,42 @@
     "\n",
     "prob_mat_1, distractor_mat_1, prob_ids = load_files(match_path, distractor_mat_path, prob_mat_path, features_path)\n",
     "baseline_thresholds, baseline_FTRs, baseline_TTR = fuse_models(prob_mat_0, distractor_mat_0, prob_mat_1, distractor_mat_1, prob_ids)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "FileNotFoundError",
+     "evalue": "[Errno 2] No such file or directory: 'results/pearson.5_0/otherFiles/facescrub_features_pearson'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mFileNotFoundError\u001b[0m                         Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-15-8d29fec6c55e>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0mfeatures_path\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m\"results/pearson.5_0/otherFiles/facescrub_features_pearson\"\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      6\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 7\u001b[0;31m \u001b[0mprob_mat_0\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mdistractor_mat_0\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mprob_ids\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mload_files\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mmatch_path\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mdistractor_mat_path\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mprob_mat_path\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mfeatures_path\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      8\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      9\u001b[0m \u001b[0mmatch_path\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m\"results/pearson.5_1/matches_facescrub_megaface_images_pearson_1000000_1.json\"\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m<ipython-input-3-85a6395c23b8>\u001b[0m in \u001b[0;36mload_files\u001b[0;34m(match_path, distractor_mat_path, prob_mat_path, features_path)\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;32mdef\u001b[0m \u001b[0mload_files\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mmatch_path\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mdistractor_mat_path\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mprob_mat_path\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mfeatures_path\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m     \u001b[0mprob_features\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mjson\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mload\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mopen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mfeatures_path\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      3\u001b[0m     \u001b[0mdistractor_mat\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mload_scores\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdistractor_mat_path\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mmatch_path\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m     \u001b[0mprob_mat\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mload_scores\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mprob_mat_path\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mmatch_path\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m     \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mfill_diagonal\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mprob_mat\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mprob_mat\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mmin\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m-\u001b[0m \u001b[0;36m1\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;31m# self dist is not interesting!\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mFileNotFoundError\u001b[0m: [Errno 2] No such file or directory: 'results/pearson.5_0/otherFiles/facescrub_features_pearson'"
+     ]
+    }
+   ],
+   "source": [
+    "# pearson.5\n",
+    "match_path = \"results/pearson.5_0/matches_facescrub_megaface_images_pearson_1000000_1.json\"\n",
+    "distractor_mat_path = \"results/pearson.5_0/otherFiles/facescrub_megaface_images_pearson_1000000_1.bin\"\n",
+    "prob_mat_path = \"results/pearson.5_0/otherFiles/facescrub_facescrub_pearson.bin\"\n",
+    "features_path = \"results/pearson.5_0/otherFiles/facescrub_features_pearson\"\n",
+    "\n",
+    "prob_mat_0, distractor_mat_0, prob_ids = load_files(match_path, distractor_mat_path, prob_mat_path, features_path)\n",
+    "\n",
+    "match_path = \"results/pearson.5_1/matches_facescrub_megaface_images_pearson_1000000_1.json\"\n",
+    "distractor_mat_path = \"results/pearson.5_1/otherFiles/facescrub_megaface_images_pearson_1000000_1.bin\"\n",
+    "prob_mat_path = \"results/pearson.5_1/otherFiles/facescrub_facescrub_pearson.bin\"\n",
+    "features_path = \"results/pearson.5_1/otherFiles/facescrub_features_pearson\"\n",
+    "\n",
+    "prob_mat_1, distractor_mat_1, prob_ids = load_files(match_path, distractor_mat_path, prob_mat_path, features_path)\n",
+    "p5_thresholds, p5_FTRs, p5_TTR = fuse_models(prob_mat_0, distractor_mat_0, prob_mat_1, distractor_mat_1, prob_ids)"
    ]
   },
   {
